update image class

--- a/blog_data/html_files/shared-custom-angular-form-validation-through-a-service.html
+++ b/blog_data/html_files/shared-custom-angular-form-validation-through-a-service.html
@@ -80,8 +80,8 @@
 <p>
     So our angular validation service will look like this:<br>
 
-    <div class="w3-container blog-image ">
-        <img src="../static/images/image0001.png">
+    <div class="w3-container w3-center">
+        <img class="w3-image" src="../static/images/image0001.png">
     </div>
     
 </p>
@@ -102,16 +102,16 @@
     The first two tests will test if the service can be created and second test that
     the input "111-11-1111" is a valid input.<br>
 
-    <div class="w3-container  blog-image ">
-        <img src="../static/images/image0002.png">
+    <div class="w3-container  w3-center">
+        <img class="w3-image" src="../static/images/image0002.png">
     </div>
 </p>
 
 <p>
     Next we will go onto testing four test cases that should be invalid.
 
-    <div class="w3-container  blog-image ">
-        <img src="../static/images/image0003.png">
+    <div class="w3-container  w3-center">
+        <img class="w3-image" src="../static/images/image0003.png">
     </div>
 </p>
 
@@ -121,8 +121,8 @@
         C:\>ng test <br>
     </div><br>
 
-    <div class="w3-container  blog-image ">
-        <img src="../static/images/image0004.png">
+    <div class="w3-container  w3-center">
+        <img class="w3-image" src="../static/images/image0004.png">
     </div>
     
     They all passed!
@@ -137,8 +137,8 @@
     is to add the <code class="w3-codespan">ReactiveFormsModule</code> within the
     <code class="w3-codespan">app.module.ts</code> so it can be used within a component.
     <br>
-    <div class="w3-container  blog-image ">
-        <img src="../static/images/image0005.png">
+    <div class="w3-container  w3-center">
+        <img class="w3-image" src="../static/images/image0005.png">
     </div>
 </p>
 
@@ -153,15 +153,15 @@
     Now we will setup our form to accept the custom validation from our service and display an
     error message if the Social Security number input is not valid.<br>
 
-    <div class="w3-container  blog-image ">
-        <img src="../static/images/image0006.png">
+    <div class="w3-container  w3-center">
+        <img class="w3-image" src="../static/images/image0006.png">
     </div>
 </p>
 
 <p>
     This is the final view from the browser.
 
-    <div class="w3-container  blog-image ">
-        <img src="../static/gif/animation0001.gif">
+    <div class="w3-container  w3-center">
+        <img class="w3-image" src="../static/gif/animation0001.gif">
     </div>
 </p>
