blog updates, style update, css file name update

--- a/blog_data/html_files/entity-framework-core-introduction.html
+++ b/blog_data/html_files/entity-framework-core-introduction.html
@@ -239,18 +239,21 @@ Update-Database
             <li>Beginning Entity Framework Core 5 From Novice to Professional (2021) Eric Vogel</li>
             <li>Database Design and Basic SQL in PostgreSQL (University of Michigan) through Cousera</li>
             <li>
-                <a href="https://www.fearofoblivion.com/dont-let-ef-call-the-shots" target="_blank">
+                <a  class="w3-hover-text-green"
+                    href="https://www.fearofoblivion.com/dont-let-ef-call-the-shots" target="_blank">
                     https://www.fearofoblivion.com/dont-let-ef-call-the-shots
                 </a>
             </li>
             <li>Getting Started with Entity Framework Core [1 of 5] | Entity Framework Core for Beginners</li>
             <li>
-                <a href="https://www.youtube.com/watch?v=SryQxUeChMc"  target="_blank">
+                <a  class="w3-hover-text-green"
+                    href="https://www.youtube.com/watch?v=SryQxUeChMc"  target="_blank">
                     https://www.youtube.com/watch?v=SryQxUeChMc
                 </a>
             </li>
             <li>
-                <a href="https://learn.microsoft.com/en-us/ef/core/"  target="_blank">
+                <a  class="w3-hover-text-green"
+                    href="https://learn.microsoft.com/en-us/ef/core/"  target="_blank">
                     https://learn.microsoft.com/en-us/ef/core/
                 </a>
             </li>
