--- a/html_projects/image-crop-and-resize/overlay-test.html
+++ b/html_projects/image-crop-and-resize/overlay-test.html
@@ -59,13 +59,13 @@
             <div class="controls">
                 <h3>Image Crop Parameters</h3>
                 <label for="cropX">X Value Top Left:</label>
-                <input type="number" value="0" min="0" id="cropX" name="cropX"><br>
+                <input type="number" min="0" id="cropX" name="cropX"><br>
                 <label for="cropY">Y Value Top Left:</label>
-                <input type="number" value="0" min="0" id="cropY" name="cropY"><br>
+                <input type="number" min="0" id="cropY" name="cropY"><br>
                 <label for="cropXLength">Crop X Length:</label>
-                <input type="number" value="0" min="0" id="cropXLength" name="cropXLength"><br>
+                <input type="number" min="0" id="cropXLength" name="cropXLength"><br>
                 <label for="cropYLength">Crop Y Length:</label>
-                <input type="number" value="0" min="0" id="cropYLength" name="cropYLength"><br>
+                <input type="number" min="0" id="cropYLength" name="cropYLength"><br>
             </div>
         </div>
     </div>
