working image crop

--- a/html_projects/image-crop-and-resize/overlay-test.html
+++ b/html_projects/image-crop-and-resize/overlay-test.html
@@ -68,6 +68,7 @@
                 <label for="cropYLength">Crop Y Length:</label>
                 <input type="number" min="0" id="cropYLength" name="cropYLength"><br>
                 <button onclick="reset();">Reset Overlay</button><br>
+                <button onclick="saveCropImage();">Save Crop Image</button><br>
                 <button class="choose-img">Load Image</button>
             </div>
         </div>
