--- a/html_projects/image-crop-and-resize/overlay-test.html
+++ b/html_projects/image-crop-and-resize/overlay-test.html
@@ -20,6 +20,9 @@
         max-width: 500px;
         max-height: 330px;
       }
+      .image-placeholder{
+        width: 100px;
+      }
       .overlay {
         position: absolute;
         left: 0px;
@@ -50,10 +53,10 @@
     <div class="container">
         <h2>Overlay Crop</h2>
         <div>
+            <img class="image-placeholder" src="img/add-image-icon.svg" id="image-placeholder">
             <div class="image-container" hidden>
                 <img class="image" src="" id="working-image">
-                <div class="overlay" hidden>
-                </div>
+                <div class="overlay" hidden></div>
             </div>
         </div>
         <div class="controls-container">
@@ -79,6 +82,8 @@
 
     <!-- SnackBar Tips -->
     <div id="snackbar">Default Text</div>
+
+    Icon by <a href="https://freeicons.io/profile/726">Free Preloaders</a> on <a href="https://freeicons.io">freeicons.io</a>
 
     <script src="js/script-overlay-test.js"></script>
 </body>
