working Crop Image html page

--- a/html_projects/image-crop-and-resize/overlay-test.html
+++ b/html_projects/image-crop-and-resize/overlay-test.html
@@ -6,22 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+        color: white;
+      }
+      body {
+        background-color: rgb(43, 43, 43);
+        overflow-x: hidden;
+      }
       .container {
-        margin: auto;
-        }
+        width: 100vw;
+        height: 100vh;
+      }
+      h1 {
+        text-align: center;
+        text-decoration: underline;
+        padding: 10px;
+      }
+      .footer {
+        text-align: center;
+        margin: 0 auto;
+        padding: 10px 0;
+        width: 90vw;
+        max-width: 1600px;
+      }
+
+      .image-working-space {
+        margin: 0 auto;
+        width: 90vw;
+        max-width: 1600px;
+      }
+      .image-working-space .image-placeholder {
+        display: block;
+        margin: 0 auto;
+        max-width: 200px;
+      }
+
       .image-container {
         position: relative;
-        max-width: 500px;
+        padding: 10px;
+        max-width: 1600px;
       }
       .image {
         position: absolute;
         left: 2px; /*Set offset For 2px border in overlay */
         top: 2px;
-        max-width: 500px;
-        max-height: 330px;
-      }
-      .image-placeholder{
-        width: 100px;
+        max-width: 1400px;
       }
       .overlay {
         position: absolute;
@@ -29,19 +60,26 @@
         top: 0px;
         border: 2px dashed red;
       }
+
       .controls-container {
-        position: static;
-        margin-top: 370px;
-        padding-bottom: 50px;
-        width: 500px;
-        height: 500px;
-        background-color: rgb(197, 197, 197);
+        text-align: center;
+        margin: 0 auto;
+        padding: 10px 0;
+        width: 90vw;
+        max-width: 1600px;
       }
       .controls {
-        float: left;
-        text-align: right;
+        display: block;
+        margin: 0 auto;
         margin-right: 15px;
         margin-left: 15px;
+      }
+      .controls input {
+        color: black;
+      }
+      .controls button {
+        color: black;
+        margin: 2px;
       }
       .controls input {
         width: 50px;
@@ -51,29 +89,35 @@
 </head>
 <body>
     <div class="container">
-        <h2>Overlay Crop</h2>
-        <div>
-            <img class="image-placeholder" src="img/add-image-icon.svg" id="image-placeholder">
-            <div class="image-container" hidden>
-                <img class="image" src="" id="working-image">
-                <div class="overlay" hidden></div>
-            </div>
+        <div class="image-working-space">
+          <h1>Crop Image</h1>
+          <div class="image-placeholder">
+            <img src="img/add-image-icon.svg" id="temp-image">
+          </div>
+          <div class="image-container" hidden>
+              <img class="image" src="" id="working-image">
+              <div class="overlay" hidden></div>
+          </div>
         </div>
         <div class="controls-container">
-            <div class="controls">
-                <h3>Image Crop Parameters</h3>
-                <label for="cropX">X Value Top Left:</label>
-                <input type="number" min="0" id="cropX" name="cropX"><br>
-                <label for="cropY">Y Value Top Left:</label>
-                <input type="number" min="0" id="cropY" name="cropY"><br>
-                <label for="cropXLength">Crop X Length:</label>
-                <input type="number" min="0" id="cropXLength" name="cropXLength"><br>
-                <label for="cropYLength">Crop Y Length:</label>
-                <input type="number" min="0" id="cropYLength" name="cropYLength"><br>
-                <button onclick="reset();">Reset Overlay</button><br>
-                <button onclick="saveCropImage();">Save Crop Image</button><br>
-                <button class="choose-img">Load Image</button>
-            </div>
+          <div class="controls">
+              <h3>Image Crop Parameters</h3>
+              <label for="cropX">X Value Top Left:</label>
+              <input type="number" min="0" id="cropX" name="cropX"><br>
+              <label for="cropY">Y Value Top Left:</label>
+              <input type="number" min="0" id="cropY" name="cropY"><br>
+              <label for="cropXLength">Crop X Length:</label>
+              <input type="number" min="0" id="cropXLength" name="cropXLength"><br>
+              <label for="cropYLength">Crop Y Length:</label>
+              <input type="number" min="0" id="cropYLength" name="cropYLength"><br>
+              <button onclick="reset();">Reset Overlay</button><br>
+              <button onclick="saveCropImage();">Save Crop Image</button><br>
+              <button class="choose-img">Load Image</button>
+          </div>
+        </div>
+        <div class="footer">
+          Icons by <a href="https://freeicons.io/profile/726">Free Preloaders</a> on <a href="https://freeicons.io">freeicons.io</a><br>
+          Website By Clayton Cook
         </div>
     </div>
 
@@ -82,8 +126,6 @@
 
     <!-- SnackBar Tips -->
     <div id="snackbar">Default Text</div>
-
-    Icon by <a href="https://freeicons.io/profile/726">Free Preloaders</a> on <a href="https://freeicons.io">freeicons.io</a>
 
     <script src="js/script-overlay-test.js"></script>
 </body>
