add browser tab info

--- a/html_projects/image-crop-and-resize/image-crop-and-resize.html
+++ b/html_projects/image-crop-and-resize/image-crop-and-resize.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Image Crop and Resize</title>
+    <link rel="shortcut icon" type="image/svg" href="img/cc_cog.svg"/>
     <style>
       * {
         margin: 0;
