update blog post

--- a/blog_data/html_files/image-editing-app.html
+++ b/blog_data/html_files/image-editing-app.html
@@ -1,27 +1,23 @@
 <p>
     The motivation for creating this project was a easy way to make
-    image that are a fixed size for a web page. For instance, if I need
+    images that are a fixed size for a web page. For instance, if I need
     an image that is 1440 pixels by 440 pixels I want to be able to easy load
     up an image, move a box that is that size around the image and
-    then save the part of the image that is in that box. 
-</p>
-
-<p>
-    With other software I did not find a application that allowed me to
-    move a specified box size around the image and only but out that section,
-    so I built one.
+    then save the part of the image that is in the box. 
 </p>
 
 <p >
     This article will go into some detail on a few of the aspects of this application.
     The final application can be found in the link below.
-    <div style="text-align: center;">
+    <div style="text-align: center; margin: 30px 0;">
         <a 
             href="../html_projects/image-crop-and-resize/image-crop-and-resize.html"
+            target="_"
             class="w3-hover-green"
-            style="font-size: 20px; padding: 10px; text-decoration: none; border-radius: 5px;"
+            style="font-size: 20px; padding: 10px; text-decoration: none; border-radius: 5px;
+                   border: solid 3px rgb(76,175,80);"
         >
-            Final Project
+            Final Project URL
         </a>
     </div>
 </p>
