minor text update

--- a/html_projects/rxjs-obervable-example/rxjs_observable_example.html
+++ b/html_projects/rxjs-obervable-example/rxjs_observable_example.html
@@ -97,8 +97,8 @@
         <h1>RxJS 7.8.1 Observable Example</h1>
         <p class="info">
             Select the Users Id and then "Load User" to
-            pull in fake data from <a href="https://reqres.in/">Reqres</a>
-            a wonderful real API to pull in fake data.
+            pull in fake data from <a href="https://reqres.in/">Reqres</a>.
+            A wonderful real API to pull in fake data.
         </p>
         <label for="userId">User Id To Look Up:</label>
         <input type="number" id="userId" name="userId" step="1" value="1" min="1" max="13"><br>
