--- a/html_projects/rxjs-obervable-example/rxjs_observable_example.html
+++ b/html_projects/rxjs-obervable-example/rxjs_observable_example.html
@@ -102,7 +102,7 @@
         </p>
         <label for="userId">User Id To Look Up:</label>
         <input type="number" id="userId" name="userId" step="1" value="1" min="1" max="13"><br>
-        <button id="loadUsers" onclick="makeRequest()">Load Users</button>
+        <button id="loadUsers" onclick="makeRequest()">Load User</button>
         <div id="data">
         </div>
     </div>
