updates to btn and blog post

--- a/blog_data/html_files/observer_pattern_and_reactive_programming.html
+++ b/blog_data/html_files/observer_pattern_and_reactive_programming.html
@@ -161,6 +161,18 @@ const {Observable, from } = rxjs;
     </code></pre>
 </p>
 
+<h2>Observable Example</h2>
+
+<p class="w3-center">
+    <div
+        onclick="window.location='../html_projects/rxjs-obervable-example/rxjs_observable_example.html'"
+        class="w3-green w3-hover-shadow w3-center grow"
+        style="font-size: 30px; cursor: pointer; max-width: 400px; margin: 0 auto; border-radius: 50px; padding: 5px;"
+    >
+        Final Example
+    </div>
+</p>
+
 <h2>References</h2>
 <ul>
     <li>
