add image rotation

--- a/blog_data/html_files/observer_pattern_and_reactive_programming.html
+++ b/blog_data/html_files/observer_pattern_and_reactive_programming.html
@@ -108,8 +108,8 @@ Callback2: value 99</pre>
     <img 
     src="../static/images/programming_images/rxjs.svg"
     alt="rxjs logo"
-    class="w3-center"
-    style="width:100%;max-width:200px"
+    class="w3-center slow-rotate"
+    style="width:100%;max-width:200px;"
 >
 </div>
 
